@@ -23,6 +23,7 @@
 
 #include "gnome-cmd-data.h"
 
+gboolean gnome_cmd_xml_config_parse (const gchar *xml, gsize xml_len, GnomeCmdData &cfg);
 gboolean gnome_cmd_xml_config_load (const gchar *path, GnomeCmdData &cfg);
 void gnome_cmd_xml_config_save (const gchar *path, GnomeCmdData &cfg);
 
